--- a/conf/packages.conf
+++ b/conf/packages.conf
@@ -2,10 +2,10 @@
 packages = python-software-properties dpkg-dev wget build-essential git-core subversion mercurial vim ntp
 
 [app]
-packages = python2.7 python-all-dev python-setuptools libpq-dev memcached supervisor postfix libevent-2.0-5 libevent-core-2.0-5 libevent-extra-2.0-5 libevent-dev
+packages = python2.7 python-all-dev python-setuptools libpq-dev memcached supervisor postfix
 
 [lb]
-packages = nginxZ
+packages = nginx
 
 [db]
 packages = postgresql-9.1 postgresql-contrib-9.1 postgresql-server-dev-9.1 postgresql-client-9.1 libpq-dev
